docs/version-1.21/modules/en/pages/explanations/context-aware-policies.adoc
= Context aware policies
:description: A description of Kubewarden context aware policies, what they are and how they are useful.
:doc-persona: ["kubewarden-policy-developer", "kubewarden-integrator"]
:doc-topic: ["explanations", "context-aware-policies"]
:doc-type: ["explanation"]
:keywords: ["kubewarden", "context-aware policy", "clusteradmissionpolicy", "admissionpolicy", "admissionrequest", "cluster administrator"]
:sidebar_label: Context aware policies
:sidebar_position: 20
:current-version: {page-origin-branch}

Developers can create policies that fetch information from a Kubernetes cluster at run time.
These are context aware policies.
Context aware policies can determine whether an `AdmissionRequest` is acceptable using information from resources deployed in the cluster.

[NOTE]
====
Context aware policies are only available in Kubewarden versions ≥ v1.6.0.
====


Resources a policy can access in the cluster is controlled by the policy server's https://kubernetes.io/docs/concepts/security/service-accounts/[Service Account].
A cluster administrator controls what a policy can access via Kubernetes RBAC rules.
Context aware policies have only *read* access to the requested resources.

For security reasons, only `ClusterAdmissionPolicy` policies can fetch information from the Kubernetes cluster.
This is because `AdmissionPolicy` resources can be deployed by unprivileged users.
If a context aware policy is deployed as an `AdmissionPolicy` all attempts to access Kubernetes resources are blocked and reported to the cluster administrator.

By default, all the cluster resources are blocked.
A Kubewarden administrator defines which Kubernetes resources each context aware policy is allowed to read.
This is done in the `ClusterAdmissionPolicy` definition using the field `contextAwareResources` .

The following example deploys a policy that requires access to the `Deployment` and `Pod` resources:

[subs="+attributes",yaml]
----
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: context-aware-policy
  namespace: default
spec:
  policyServer: default
  module: "registry://ghcr.io/kubewarden/policies/context-aware-policy:v1.0.0"
  settings: {}
  contextAwareResources:
    - apiVersion: "apps/v1"
      kind: "deployment"
    - apiVersion: "v1"
      kind: "pod"
  rules:
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      resources: ["deployment"]
      operations:
        - CREATE
        - UPDATE
  mutating: false
----

Once deployed, this policy can read the data of the `deployment` and `pod` resources.

Policy authors provide lists of Kubernetes resources for their context aware policy.
This is done by annotating the policy.
Kubewarden administrators view policy metadata using the `kwctl inspect` command.
They can get a list of resources the policy needs access to.
An administrator uses this list to populate the `ClusterAdmissionPolicy` definition.

[WARNING]
====
To prevent system abuse, Kubewarden administrators must review the resources the policy will access.

For example, a policy evaluating ingress objects would have good reasons to read the `Ingress` resources defined in the cluster.
The same policy can't justify having access to `Secret` resources.

Policies should have the least access needed to function correctly.
====


[NOTE]
====

Kubernetes resources are identified by `apiVersion` and `kind`.

Usually, `apiVersion` is a string in the format `<api>/<version>`.
Resources from the `core` API group (Pod, Service, and others) should not define the group name, `<api>`.
They should only define the `<version>` (for example, `v1`).

For a core resource, the first will not work, the second will.

[subs="+attributes",console]
----
- apiVersion: "core/v1"
  kind: "pod"
----

[subs="+attributes",console]
----
- apiVersion: "v1"
  kind: "pod"
----

All other Kubernetes resources need the full definition: `<api>/<version>`.
====


== Further readings

More detailed information about context aware policies can be found in xref:../reference/spec/05-context-aware-policies.adoc[this section]
of our reference documentation.
